# python-package-exercise-project-3-team-4

./: Pipfile  README.md  animals.py  ex.py  pyfarmsay.py  pyproject.toml  test_pyfarmsay.py  util.py
.github/workflows/: github-workflow.yml
example_files/: ex.py  ex_2.py
src/pyfarmsay/: __main__.py  animals.py  farmsay.py  pyfarmsay.py  util.py
tests/: test.py
