[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyfarmsay"
description = "An example of a package developed with pyenv, built with build using setuptools, uploaded to PyPI using twine, and distributed via pip."
version = "0.1.1"
authors = [
    { name="Harrison Douglass", email="hpd2015@nyu.edu" },
    { name="Sarah Al-Towaity", email="sa5793@nyu.edu" },
    { name="Brandon Chao", email="bc2872@nyu.edu" },
    { name="Eduarda Martini", email="em4047@nyu.edu" },
    { name="Michelle Lu", email="ml6610@nyu.edu" },

]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["python", "package", "build", "tutorial"]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest", "textwrap"]

[project.urls]
"Homepage" = "https://github.com/software-students-fall2022/python-package-exercise-project-3-team-4"
"Repository" = "https://github.com/software-students-fall2022/python-package-exercise-project-3-team-4"
"Bug Tracker" = "https://github.com/software-students-fall2022/python-package-exercise-project-3-team-4/issues"

[project.scripts]
pyfarmsay = "pyfarmsay.__main__:main"
